[workspace]
resolver = "2"
members = [
    "proto-build",
    "cosmos-sdk-proto",
    "cosmrs"
]

[patch.crates-io]
ics23 = { git = "https://github.com/cosmos/ics23", branch = "romac/rust/update-pbjson" }
tendermint-proto = { git = "https://github.com/informalsystems/tendermint-rs", branch = "romac/missing-serde-proto" }
