[package]
name = "cosmos-sdk-proto"
version = "0.24.0-pre"
authors = [
    "Justin Kilpatrick <justin@althea.net>",
    "Greg Szabo <greg@informal.systems>",
    "Tony Arcieri <tony@iqlusion.io>"
]
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/cosmos-sdk-proto"
description = "Protobuf stuct defintions for interacting Cosmos SDK powered blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.72"

[dependencies]
prost = { version = "0.13", default-features = false }
tendermint-proto = "0.39.1"
serde = "1.0.203"

# Optional dependencies
tonic = { version = "0.12", optional = true, default-features = false, features = ["codegen", "prost"] }

[features]
default = ["grpc-transport"]
std = ["prost/std", "tendermint-proto/std"]
grpc = ["std", "tonic"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
