[package]
name = "cosmos-sdk-proto"
version = "0.27.0"
authors = [
    "Justin Kilpatrick <justin@althea.net>",
    "Greg Szabo <greg@informal.systems>",
    "Tony Arcieri <tony@iqlusion.io>"
]
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/cosmos-sdk-proto"
description = "Protobuf stuct defintions for interacting Cosmos SDK powered blockchains"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "database"]
keywords = ["blockchain", "cosmos", "tendermint", "proto"]
edition = "2021"
rust-version = "1.75"

[dependencies]
prost = { version = "0.14.1", default-features = false }
tendermint-proto = { version = "0.40.4", path = "../../tendermint-rs/proto" }
http-body-util = "0.1.3"
bytes = "1.0" 

# Optional dependencies
tonic = { version = "0.14.1", optional = true, default-features = false, features = ["codegen"] }
tonic-prost = { version = "0.14.1", optional = true, default-features = false }
serde = { version = "1.0.203", optional = true, default-features = false, features = ["alloc"] }
pbjson = { package = "informalsystems-pbjson", optional = true, default-features = false, version = "0.7" }

[features]
default = ["grpc-transport"]
std = ["prost/std", "tendermint-proto/std"]
grpc = ["std", "tonic", "tonic-prost"]
grpc-transport = ["grpc", "tonic/transport"]
cosmwasm = []
serde = ["dep:serde", "pbjson"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
