[package]
name = "cosmos_sdk"
version = "0.3.0" # Also update html_root_url in lib.rs when bumping this
authors = ["Tony Arcieri <tony@iqlusion.io>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/cosmos/cosmos-rust/tree/main/cosmos-sdk-rs"
description = "Transaction builder and signer for Cosmos-based blockchains"
readme     = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies", "encoding"]
keywords   = ["blockchain", "cosmos", "tendermint", "transaction"]

[dependencies]
cosmos-sdk-proto = { version = "0.6", default-features = false, path = "../cosmos-sdk-proto" }
ecdsa = { version = "0.12", features = ["std"] }
eyre = "0.6"
k256 = { version = "0.9", features = ["ecdsa", "sha256"] }
prost = "0.7"
prost-types = "0.7"
rand_core = { version = "0.6", features = ["std"] }
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
tendermint = { version = "0.21", default-features = false, features = ["secp256k1"] }
thiserror = "1"

# optional dependencies
bip32 = { version = "0.2", optional = true }
tendermint-rpc = { version = "0.21", optional = true, features = ["http-client"] }
tokio = { version = "1", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["bip32"]
dev = ["rpc", "tokio"]
rpc = ["tendermint-rpc"]
cosmwasm = ["cosmos-sdk-proto/cosmwasm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
