[package]
name = "proto-build"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>", "Tony Arcieri <tony@iqlusion.io>"]
edition = "2018"
publish = false


[dependencies]
prost = "0.7"
prost-build = "0.7"
tonic = { version = "0.4.3", default-features = false, features = ["codegen", "prost"] }
tonic-build = { version = "0.4.2", default-features = false, features = ["prost"] }
regex = "1"
tempdir = "0.3"
walkdir = "2"
