[package]
name = "proto-build"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>", "Tony Arcieri <tony@iqlusion.io>"]
edition = "2018"
publish = false


[dependencies]
prost = "0.9"
prost-build = "0.9"
tonic = { version = "0.6", default-features = false, features = ["codegen", "prost"] }
tonic-build = { version = "0.6", default-features = false, features = ["rustfmt", "prost"] }
regex = "1"
tempdir = "0.3"
walkdir = "2"
