[package]
name = "proto-build"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>", "Tony Arcieri <tony@iqlusion.io>"]
edition = "2018"
publish = false
rust-version = "1.75"

[dependencies]
prost = "0.13"
prost-build = "0.13"
tonic = "0.13"
tonic-build = "0.13"
regex = "1"
walkdir = "2"
