[package]
name = "gaiauto"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
cosmrs = {path = "../"}
abscissa_tokio = "0.6.0"
tokio ={ version = "1", features = ["macros", "fs"] }



[dependencies.abscissa_core]
version = "0.6.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0", features = ["testing"] }
once_cell = "1.2"

[features]

